--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "@electron-forge/cli": "^6.0.0-beta.47",
     "@electron-forge/maker-deb": "^6.0.0-beta.47",
     "@electron-forge/maker-rpm": "^6.0.0-beta.47",
