--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "electron": "7.1.7",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
