--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.47",
     "@electron-forge/maker-zip": "^6.0.0-beta.47",
     "electron": "7.1.7",
+    "electron-devtools-installer": "^2.2.4",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-sourcemaps": "^2.6.5",
