--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "babel-jest": "^24.9.0",
     "electron": "7.1.7",
     "electron-devtools-installer": "^2.2.4",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.17.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-sourcemaps": "^2.6.5",
