--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\"",
+    "lint": "eslint --cache --color --ext .jsx,.js src",
     "test": "jest --watch",
     "test-once": "jest"
   },
