--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "bootstrap": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.0",
-    "regenerator-runtime": "^0.13.3"
+    "popper.js": "^1.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -72,7 +71,8 @@
     "jest-watch-typeahead": "^0.4.2",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "jest": {
     "collectCoverageFrom": [
