--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,21 @@
             "type": "npm",
             "script": "test-once",
             "problemMatcher": []
+        },
+        {
+            "type": "gulp",
+            "task": "start",
+            "problemMatcher": []
+        },
+        {
+            "type": "npm",
+            "script": "lint",
+            "problemMatcher": []
+        },
+        {
+            "type": "npm",
+            "script": "start",
+            "problemMatcher": []
         }
     ]
 }
