--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
-    "@electron-forge/cli": "^6.0.0-beta.51",
+    "@electron-forge/cli": "^6.0.0-beta.52",
     "@electron-forge/maker-deb": "^6.0.0-beta.51",
     "@electron-forge/maker-rpm": "^6.0.0-beta.51",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.51",
@@ -76,7 +76,7 @@
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
-    "electron": "8.0.1",
+    "electron": "^8.4.0",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
